--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_core: ^0.7.0
   cloud_firestore: ^0.16.0
   firebase_storage: ^7.0.0
+  firebase_auth: ^0.20.0+1
+  google_fonts: ^1.1.2
   
 
   # The following adds the Cupertino Icons font to your application.
