--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   firebase_storage: ^7.0.0
   firebase_auth: ^0.20.0+1
   google_fonts: ^1.1.2
+  uuid: ^2.2.2
+  geolocator: ^6.1.14
+  bloc: ^6.0.0
+  flutter_bloc: ^6.0.0
+  shared_preferences: ^0.5.12+4
   
 
   # The following adds the Cupertino Icons font to your application.
