--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:1.0.3'
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
+    implementation "androidx.browser:browser:1.3.0"
 }
