--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^0.7.0
+  image_cropper: ^1.3.1
+  image_picker: ^0.6.7+22
   cloud_firestore: ^0.16.0
   firebase_storage: ^7.0.0
   firebase_auth: ^0.20.0+1
