--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   bloc: ^6.0.0
   flutter_bloc: ^6.0.0
   shared_preferences: ^0.5.12+4
+  pdf: ^2.0.0
   
 
   # The following adds the Cupertino Icons font to your application.
