--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_bloc: ^6.0.0
   shared_preferences: ^0.5.12+4
   pdf: ^2.0.0
+  skeleton_text: ^2.0.2
   
 
   # The following adds the Cupertino Icons font to your application.
