--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   google_fonts: ^1.1.2
   uuid: ^2.2.2
   geolocator: ^6.1.14
+  carousel_slider: ^3.0.0
   bloc: ^6.0.0
   flutter_bloc: ^6.0.0
   shared_preferences: ^0.5.12+4
