--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   pdf: ^2.0.0
   skeleton_text: ^2.0.2
+  url_launcher: ^5.7.10
   
 
   # The following adds the Cupertino Icons font to your application.
