--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^0.7.0
   image_picker: ^0.6.7+22
+  dio: ^3.0.10
   cloud_firestore: ^0.16.0
   firebase_storage: ^7.0.0
   firebase_auth: ^0.20.0+1
@@ -35,6 +36,7 @@ dependencies:
   bloc: ^6.0.0
   flutter_bloc: ^6.0.0
   shared_preferences: ^0.5.12+4
+  path_provider: ^1.6.27
   pdf: ^2.0.0
   skeleton_text: ^2.0.2
   url_launcher: ^5.7.10
