--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,17 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^0.7.0
+  firebase_core: ^0.5.2+1
   flutter_rating_bar: ^3.2.0+1
   image_picker: ^0.6.7+22
   dio: ^3.0.10
-  cloud_firestore: ^0.16.0
-  firebase_storage: ^7.0.0
-  firebase_auth: ^0.20.0+1
+  cloud_firestore: ^0.14.3+1
+  firebase_storage: ^5.2.0
+  firebase_auth: ^0.18.4
   google_fonts: ^1.1.2
   uuid: ^2.2.2
   geolocator: ^6.1.14
-  carousel_slider: ^3.0.0
   bloc: ^6.0.0
   flutter_bloc: ^6.0.0
   shared_preferences: ^0.5.12+4
@@ -42,6 +41,8 @@ dependencies:
   skeleton_text: ^2.0.2
   url_launcher: ^5.7.10
   flutter_svg: ^0.18.1
+  firebase_messaging: ^7.0.3
+  flutter_local_notifications: ^4.0.0
   
 
   # The following adds the Cupertino Icons font to your application.
