--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,12 +46,12 @@ dependencies:
   firebase_analytics: ^6.2.0
   firebase_messaging: ^7.0.3
   flutter_local_notifications: ^4.0.0
+  esys_flutter_share: ^1.0.2
+  open_file: ^3.0.3
   
 
   
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
