--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_local_notifications: ^4.0.0
   esys_flutter_share: ^1.0.2
   open_file: ^3.0.3
+  permission_handler: ^5.1.0+2
+  downloads_path_provider: ^0.1.0
   
 
   
