--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   esys_flutter_share: ^1.0.2
   open_file: ^3.0.3
   permission_handler: ^5.1.0+2
-  downloads_path_provider: ^0.1.0
+  # downloads_path_provider: ^0.1.0
   crypt: ^3.0.1
   
 
