--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   permission_handler: ^5.1.0+2
   # downloads_path_provider: ^0.1.0
   crypt: ^3.0.1
+  flutter_image_compress: ^0.7.0
   
 
   
