--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   # downloads_path_provider: ^0.1.0
   crypt: ^3.0.1
   flutter_image_compress: ^0.7.0
+  photo_view: ^0.10.3
   
 
   
